# SimpleEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE
assets/models/: README.md  ship.glb
scripts/: build.bat  build.ps1
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h  main.cpp
